# verifiers

./: README.md  pyproject.toml
configs/: zero3.yaml
verifiers/: mock_vllm.py
verifiers/examples/: demo_train.py  math_train.py  smola_math_train_3.py
verifiers/inference/: vllm_serve.py
verifiers/prompts/: smola_few_shots.py
verifiers/tools/smolagents/: calculator_tool.py
verifiers/trainers/: grpo_env_trainer.py
