[project]
name = "verifiers"
version = "0.1.0"
description = "Verifiers for reinforcement learning with LLMs"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "William Brown", email = "williambrown97@gmail.com" },
]
dependencies = [
  "accelerate",
  "brave-search",
  "deepspeed",
  "duckduckgo-search",
  "latex2sympy>=1.0.3",
  "liger-kernel",
  "math-verify[antlr4-13-2]>=0.1.0",
  "peft",
  "pylatexenc>=2.10",
  "requests>=2.32.3",
  "rich",
  "setuptools",
  "smolagents>=1.15.0",
  "torch==2.6.0",
  "trl==0.17",
  "vllm>=0.8.5.post1",
  "wandb",
]

[tool.setuptools]
packages = ["verifiers"]
